# TicTacToeBot

./: .env  .flake8  .gitignore  README.md
bot/: .env  Dockerfile  docker-compose.yml  logger.py  logging_bot.conf.yml  main.py  main_webhook.py  pyproject.toml
bot/api/tg/: __init__.py  tg.py
bot/handlers/: __init__.py  leave.py  play.py  router.py  start.py  stats.py
bot/integrations/: __init__.py  bot.py  dispatcher.py  redis_connection.py
bot/middleware/: logger.py
bot/run/: start_bot.sh
bot/utils/: __init__.py  _utils.py  background_tasks.py  logger.py  state.py  webhook.py
src/: Dockerfile  docker-compose.yml  logger.py  logging.conf.yml  main.py  metrics.py  pyproject.toml
src/api/: __init__.py  game.py  user.py
src/config/: __init__.py  config.py  db.py
src/crud/: game.py  redis.py  user.py
src/integrations/: auth.py  bearer.py
src/middleware/: logger.py
src/models/: __init__.py  meta.py  models.py
src/schema/: __init__.py  game.py  user.py
src/scripts/: init_db.sql
